--- a/hyprland.conf
+++ b/hyprland.conf
@@ -64,14 +64,10 @@ $menu = python ~/.garden/fabric/app_launcher.py
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-
 exec-once = ~/bin/xdg-desktop-portal-hyprland.sh
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpaper & hypridle
-exec-once = python ~/.garden/fabric/bar.py
+# exec = python ~/.garden/fabric/bar.py
 
 #####################
 ### LOOK AND FEEL ###
