--- a/hyprland.conf
+++ b/hyprland.conf
@@ -31,7 +31,7 @@ env = HYPRCURSOR_SIZE,24
 
 # You can split this configuration into multiple files
 # Create your files separately and then link them to this file like this:
-source = ~/.config/hypr/latte.conf
+# source = ~/.config/hypr/latte.conf
 
 # fabric
 layerrule = blur, fabric
