--- a/hyprland.conf
+++ b/hyprland.conf
@@ -54,7 +54,7 @@ monitor=,highres@highrr,auto,auto
 # Set programs that you use
 $terminal = wezterm
 $fileManager = y
-$menu = python ~/.garden/fabric/app_launcher.py
+$menu = python ~/garden/fabric/app-launcher/app_launcher.py
 
 
 #################
@@ -67,7 +67,8 @@ $menu = python ~/.garden/fabric/app_launcher.py
 exec-once = ~/bin/xdg-desktop-portal-hyprland.sh
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpaper & hypridle
-# exec = python ~/.garden/fabric/bar.py
+exec-once = python ~/garden/fabric/bar/bar.py
+exec-once = python ~/garden/fabric/notifications/notifications.py
 
 #####################
 ### LOOK AND FEEL ###
