touchpad for petun

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -157,7 +157,8 @@ input {
     sensitivity = -0.8 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
+	scroll_factor = 0.2
     }
 }
 
@@ -169,10 +170,14 @@ gestures {
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+    name = synps/2-synaptics-touchpad
+    sensitivity = -0.1
 }
 
+device {
+    name = synaptics-tm2722-001
+    sensitivity = -0.1
+}
 
 ###################
 ### KEYBINDINGS ###
