--- a/hyprland.conf
+++ b/hyprland.conf
@@ -176,6 +176,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 bind = , PRINT, exec, hyprshot -m region
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+bind = $mainMod, B, exec, python ~/garden/fabric/bluetooth-widget/bluetooth_widget.py
+
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
