--- a/flowers/hypr/hyprland.conf
+++ b/flowers/hypr/hyprland.conf
@@ -142,8 +142,7 @@ input {
     kb_rules =
 
     follow_mouse = 1
-
-    sensitivity = -0.8 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = -0.8      # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = true
@@ -165,6 +164,11 @@ device {
 device {
     name = synaptics-tm2722-001
     sensitivity = -0.1
+}
+device {
+    name = mx-anywhere-2s-mouse
+    sensitivity = 0.2
+    accel_profile = flat
 }
 
 ###################
