from fabric to ags

--- a/flowers/hypr/hyprland.conf
+++ b/flowers/hypr/hyprland.conf
@@ -22,15 +22,17 @@ env = HYPRCURSOR_SIZE,24
 # source = ~/.config/hypr/latte.conf
 
 # fabric
-layerrule = blur, fabric
-layerrule = ignorezero, fabric
+# layerrule = blur, fabric
+# layerrule = ignorezero, fabric
 
 ################
 ### MONITORS ###
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,highres@highrr,auto,auto
+monitor=        , highres@highrr    , auto      , 1.0
+monitor= eDP-1  , 1366x768@60.06    , -1366x300 , 1.0
+#monitor= VGA-1  , 1920x1080@60.00   , 0x0       , 1.0
 
 
 ###################
@@ -42,8 +44,8 @@ monitor=,highres@highrr,auto,auto
 # Set programs that you use
 $terminal = wezterm
 $fileManager = y
-$menu = python ~/garden/flowers/fabric/app-launcher/app_launcher.py
-
+#$menu = python ~/garden/flowers/fabric/app-launcher/app_launcher.py
+$menu = ags run ~/garden/flowers/ags/applauncher.ts
 
 #################
 ### AUTOSTART ###
@@ -55,8 +57,9 @@ $menu = python ~/garden/flowers/fabric/app-launcher/app_launcher.py
 exec-once = ~/bin/xdg-desktop-portal-hyprland.sh
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpaper & hypridle
-exec-once = python ~/garden/flowers/fabric/bar/bar.py
-exec-once = python ~/garden/flowers/fabric/notifications/notifications.py
+# exec-once = python ~/garden/flowers/fabric/bar/bar.py
+# exec-once = python ~/garden/flowers/fabric/notifications/notifications.py
+exec-once = ags run ~/garden/flowers/ags/desktop.ts
 
 #####################
 ### LOOK AND FEEL ###
